jacoco corrected 2/ added aggregator of test coverage