@@ -24,6 +24,9 @@
         <sonar.token>sqp_ed79a661a6e2e97f3553993bcae570759a42090b</sonar.token>
         <sonar.coverage.exclusions>**/test/**</sonar.coverage.exclusions>
         <jacoco.version>0.8.12</jacoco.version>
+        <sonar.coverage.jacoco.xmlReportPaths>
+            jacoco-agregator/target/site/jacoco-aggregate/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencyManagement>
@@ -34,11 +37,6 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.12</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -53,6 +51,7 @@
         <module>notification-service</module>
         <module>gateway</module>
         <module>admin-service</module>
+        <module>jacoco-agregator</module>
     </modules>
 
     <build>
@@ -83,65 +82,30 @@
                     <artifactId>sonar-maven-plugin</artifactId>
                     <version>3.9.1.2184</version>
                 </plugin>
-                <!-->JACOCO CONFIGURATION /!-->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.2</version>
-                    <configuration>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
-                        <testFailureIgnore>true</testFailureIgnore>
-                        <forkCount>2</forkCount>
-                        <reuseForks>true</reuseForks>
-                        <argLine>${surefireArgLine}</argLine>
-                    </configuration>
-                </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.12</version>
+                    <version>0.8.7</version>
                     <executions>
                         <execution>
-                            <id>default-prepare-agent</id>
+                            <id>prepare-agent</id>
                             <goals>
                                 <goal>prepare-agent</goal>
                             </goals>
-                            <configuration>
-                                <destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
-                                <propertyName>surefireArgLine</propertyName>
-                            </configuration>
                         </execution>
                         <execution>
-                            <id>default-report</id>
-                            <phase>test</phase>
+                            <id>report</id>
                             <goals>
                                 <goal>report</goal>
                             </goals>
                             <configuration>
-                                <dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-                                <outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>default-check</id>
-                            <goals>
-                                <goal>check</goal>
-                            </goals>
-                            <configuration>
-                                <rules>
-                                    <rule>
-                                        <element>BUNDLE</element>
-                                        <limits>
-                                            <limit>
-                                                <counter>COMPLEXITY</counter>
-                                                <value>COVEREDRATIO</value>
-                                                <minimum>0.70</minimum>
-                                            </limit>
-                                        </limits>
-                                    </rule>
-                                </rules>
+                                <formats>
+                                    <format>XML</format>
+                                </formats>
+                                <includes>
+                                    <include>**/*IT.class</include>
+                                    <include>**/*Test.class</include>
+                                </includes>
                             </configuration>
                         </execution>
                     </executions>
